--- a/locale/ko/LC_MESSAGES/djangojs.po
+++ b/locale/ko/LC_MESSAGES/djangojs.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # EunMiLee <16thetower@gmail.com>, 2012
+# Ian Y. Choi <ianyrchoi@gmail.com>, 2015
 # Sungjin Kang <potopro@gmail.com>, 2013
 # Sungjin Kang <potopro@gmail.com>, 2014
 # Yong Choi <sk8er.choi@gmail.com>, 2012
@@ -12,8 +13,8 @@ msgstr ""
 "Project-Id-Version: askbot\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-12-14 16:06-0600\n"
-"PO-Revision-Date: 2014-12-14 22:11+0000\n"
-"Last-Translator: evgeny <evgeny.fadeev@gmail.com>\n"
+"PO-Revision-Date: 2016-01-10 03:56+0000\n"
+"Last-Translator: Ian Y. Choi <ianyrchoi@gmail.com>\n"
 "Language-Team: Korean (http://www.transifex.com/askbot/askbot/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -225,7 +226,7 @@ msgstr[0] "%s 팔로워들"
 
 #: media/js/post.js:973
 msgid "<div class=\"following\">Following</div><div class=\"unfollow\">Unfollow</div>"
-msgstr ""
+msgstr "<div class=\"following\">팔로잉</div><div class=\"unfollow\">언팔로우</div>"
 
 #: media/js/post.js:1029
 msgid "remove flag"
@@ -550,7 +551,7 @@ msgstr "분에 대해서"
 #: media/js/utils.js:3918
 #, c-format
 msgid "%d min"
-msgstr ""
+msgstr "%d min"
 
 #: media/js/utils.js:3919
 msgid "about an hour"
@@ -559,7 +560,7 @@ msgstr "시간에 대해서"
 #: media/js/utils.js:3920
 #, c-format
 msgid "%d h"
-msgstr ""
+msgstr "%d h"
 
 #: media/js/utils.js:3921 media/js/utils.js.c:4049
 msgid "yesterday"
